--- a/style.css
+++ b/style.css
@@ -28,13 +28,13 @@ font-family: 'Playfair Display', serif;
 /* PC */
 @media (max-width: 1087px) {
 	[class*="__container"] {
-		max-width: 970px;
+		max-width: none;
 	}
 }
 /* TABLET */
 @media (max-width: 991.98px) {
 	[class*="__container"] {
-		max-width: 750px;
+		max-width: none;
 	}
 }
 /* MOBILE */
@@ -55,42 +55,40 @@ a {
    border-image: linear-gradient(to right, #eeb4b4, #FF6099) 1;
    background-color: #FAEEE7;
    font-family: 'Merriweather', serif;
-   font-size: 24px;
-   line-height: 40px;
+   font-size: 16px;
+   line-height: 1.5;
    padding: 12px 0;
    color: #33272A;
    overflow: hidden;
 }
-@media (max-width: 991.98px) {
-}
 /*=================================HEADER====================================*/
 .header {
-   min-height: 100vh;
+   margin: 0 0 30px 0;
 }
-.header__nav {
+.menu__nav {
    padding: 25px 0;
 }
-.header__list {
+.menu__list {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
 }
-.header__item {
+.menu__item {
    font-weight: 700;
-   font-size: 20px;
-   line-height: 34px;
+   font-size: 1.25rem;
+   line-height: 1.5;
    margin: 0 15px 0 0;
    position: relative;
 }
-.header__item a {
+.menu__item a {
    position: relative;
    z-index: 3;
 }
-.header__item:last-child {
+.menu__item:last-child {
    margin: 0 0 0 0;
 }
-.header__item::after {
+.menu__item::after {
    content: "";
    display: inline-block;
    position: absolute;
@@ -104,7 +102,7 @@ a {
    transform-origin: bottom right;
    transition: transform 0.3s ease-out;
 }
-.header__item:hover.header__item::after {
+.menu__item:hover.menu__item::after {
    transform: scaleX(1);
    transform-origin: bottom left;
 }
@@ -115,11 +113,13 @@ a {
 }
 .header__text {
    padding: 0 15px 0 0;
+   font-size: 1.5rem;
+   line-height: 1.5;
 }
 .title {
    font-family: 'Playfair Display', serif;
-   font-size: 55px;
-   line-height: 74px;
+   font-size: 4rem;
+   line-height: 1.5;
    font-weight: 700;
    text-align: center;
 }
@@ -147,8 +147,8 @@ a {
 .links__text {
    color: #594a4e;
    font-weight: 700;
-   font-size: 24px;
-   line-height: 30px;
+   font-size: 1.5rem;
+   line-height: 1.5;
 }
 .links__text:hover {
    color: #dba3a4;
@@ -159,37 +159,37 @@ a {
 }
 .header__image {
 }
-@media (max-width: 1087px) {
-   .header__nav {
-      padding: 20px 0;
-   }
+@media (max-width: 991.98px) {
    .header__hero {
       padding: 80px 0;
    }
 }
-@media (max-width: 991.98px) {
-   .title {
-      font-size: 48px;
-      line-height: 64px;
-   }
-   .header__hero {
-      padding: 40px 0;
-   }
-}
 @media (max-width: 767.98px) {
    .header__hero {
+      padding: 60px 0 30px 0;
       flex-direction: column-reverse;
       align-items: center;
    }
+   .title {
+      font-size: 3rem;
+   }
    .header__title {
-      margin: 30px 0px 45px 0px;
+      margin: 30px 0px 25px 0px;
       text-align: center;
    }
    .header__text {
       text-align: center;
+      font-size: 1.25rem;
    }
    .links {
       justify-content: center;
+   }
+   .links__text {
+      font-size: 1.25rem;
+   }
+   .header__image .image {
+      width: 350px;
+      height: 350px;
    }
 }
 /*=================================MAIN====================================*/
@@ -199,17 +199,17 @@ a {
 }
 /*===============================MAIN=ABOUT===================================*/
 .about {
-   margin: 0px 0px 60px 0;
+   margin: 0px 0px 30px 0;
 }
 .about__title {
 }
 .subtitle {
    font-family: 'Playfair Display', serif;
-   font-size: 36px;
-   line-height: 48px;
+   font-size: 2.25rem;
+   line-height: 1.5;
    font-weight: 700;
    text-align: center;
-   padding: 30px 0;
+   margin: 0 0 30px 0;
 }
 .about__body {
 }
@@ -253,7 +253,10 @@ a {
    display: flex;
    justify-content: space-between;
    align-items: center;
-   padding: 15px 0;
+   padding: 5px 0;
+}
+.about__box2.box {
+   flex-direction: row-reverse;
 }
 .box__image-container {
    flex: 1 1 auto;
@@ -265,25 +268,26 @@ a {
 .box__text {
    max-width: 700px;
    text-align: center;
-   padding: 0 15px;
+   font-size: 1.25rem;
+   line-height: 1.5;
+   padding: 15px;
 }
 @media (max-width: 1087px) {
-   .subtitle {
-      padding: 20px 0;
-   }
    .about__box1 .box__image::after, .about__box2 .box__image::before, .about__box3 .box__image::after {
       display: none;
    }
 }
 @media (max-width: 991.98px) {
-   .box {
-      padding: 10px 0;
-   }
 }
 @media (max-width: 767.98px) {
-   .box__text {
-      font-size: 20px;
-      line-height: 25px;
+   .box {
+      flex-direction: column;
+   }
+   .box__image {
+      margin: 15px 0;
+   }
+   .about__box2.box {
+      flex-direction: column;
    }
 }
 /*===============================MAIN=SKILLS===================================*/
@@ -303,7 +307,7 @@ a {
 .block__parent {
    flex: 1 1 auto;
    max-width: 900px;
-   height: 60px;
+   height: 50px;
 }
 .block__scale {
    background: linear-gradient(90deg, #FF8BA7 0%, #FFBABD 50%, #FAEEE7 100%);
@@ -312,7 +316,10 @@ a {
    border-radius: 15px;
 }
 .block__name {
-   padding: 0 0 0 15px;
+   font-size: 1.5rem;
+   line-height: 1.5;
+   font-weight: 700;
+   padding: 0 0 0 10px;
    max-width: 200px;
    overflow-wrap: break-word;
 }
@@ -331,14 +338,6 @@ a {
 .skills__block5 .block__scale {
    max-width: 45%;
 }
-@media (max-width: 1087px) {
-   .block {
-      padding: 20px 0;
-   }
-   .block__parent {
-      height: 50px;
-   }
-}
 @media (max-width: 991.98px) {
    .block {
       padding: 15px 0;
@@ -350,6 +349,9 @@ a {
    }
    .block__parent {
       height: 40px;
+   }
+   .block__name {
+      font-size: 1.25rem;
    }
 }
 /*===============================MAIN=PORTFOLIO===================================*/
@@ -364,10 +366,12 @@ a {
    display: flex;
    flex-wrap: wrap;
    padding: 15px 0;
+   margin: -5px;
 }
 .web {
-   flex: 1 1 25%;
+   flex: 1 1 30%;
    position: relative;
+   margin: 5px;
 }
 .web img {
    width: 100%;
@@ -422,11 +426,11 @@ a {
 }
 /*===============================FOOTER===================================*/
 .footer {
-   max-width: 860px;
    margin: 0 auto;
+   max-width: 800px;
 }
 .footer__title {
-   padding: 30px 0px 40px 0px;
+   padding: 10px 0px 30px 0px;
 }
 .footer__body {
    border: 4px solid #33272A;
@@ -438,33 +442,25 @@ a {
    margin: 0 0 40px 0;
 }
 .footer__subtitle {
-   font-size: 24px;
-   line-height: 40px;
+   font-size: 1.5rem;
+   line-height: 1.5;
    font-weight: 700;
    text-align: center;
    margin: 0 0 40px 0;
 }
 .footer__button {
    display: inline-block;
-   padding: 18px 70px;
+   padding: 15px 40px;
    background-color: #F77E9A;
    color: #fff;
-   font-size: 36px;
+   font-size: 2rem;
+   line-height: 1.5;
    border-radius: 8px;
    margin: 0px 0px 60px 0px;
-   -webkit-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
-   box-shadow: 5px 5px 1px rgba(0, 0, 0, 0.5);
    transition: background-color .3s;
 }
 .footer__button:hover {
    background-color: #e2216a;
-}
-.footer__button:active {
-   color: #fff;
-   position: relative;
-   top: 3px;
-   -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.5);
-   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.5);
 }
 .footer__links {
 }
@@ -478,25 +474,99 @@ a {
 }
 .links__text {
 }
-@media (max-width: 1087px) {
-   .footer__title {
-      padding: 20px 0px 40px 0px;
-   }
-}
 @media (max-width: 991.98px) {
    .footer__body {
       padding: 20px 15px 40px 15px;
-      margin: 0 0 40px 0;
    }
    .footer__subtitle {
       margin: 0 0 20px 0;
+      font-size: 1.25rem;
    }
    .footer__button {
       margin: 0px 0px 40px 0px;
+      font-size: 1.5rem;
    }
 }
+
+.header__menu {
+}
+.menu {
+}
+.menu__icon {
+}
+.menu__nav {
+}
+.menu__list {
+}
+.menu__item {
+}
+.menu__link {
+}
+
 @media (max-width: 767.98px) {
-   .footer__button {
-      font-size: 32px;
+   .menu__nav:active .wrapper {
+   position: relative;
+   padding: 0;
+   border: none;
+   }
+   .menu__nav:active [class*="__container"] {
+      padding: 0;
+   }
+   .header__menu {
+      position: relative;
+   }
+   .menu__nav {
+      display: none;
+   }
+   .menu__nav {
+      position: absolute;
+      min-height: 100vh;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.75);
+      padding: 80px 0 0 0;
+   }
+   .menu__list {
+      display: flex;
+      flex-direction: column;
+   }
+   .menu__item {
+      margin: 0 0 35px 0;
+   }
+   .menu__item::after {
+      content: none;
+   }
+   .menu__link {
+      font-size: 1.5rem;
+      line-height: 1.5;
+      color: #fff;
+   }
+   .menu__link:hover {
+      color: #F7C9C9;
+   }
+   .menu__icon {
+      height: 26px;
+      width: 40px;
+      position: absolute;
+      top: 30px;
+      right: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+   }
+   .line1 {
+      width: 30px;
+      height: 2px;
+      background-color: #33272A;
+   }
+   .line2 {
+      width: 40px;
+      height: 2px;
+      background-color: #33272A;
+   }
+   .line3 {
+      width: 30px;
+      height: 2px;
+      background-color: #33272A;
    }
 }
