--- a/style.css
+++ b/style.css
@@ -49,10 +49,12 @@ font-family: 'Playfair Display', serif;
 a {
    color: #33272A;
 }
+.wrapper-border {
+   padding: 6px;
+   background: linear-gradient(to right, #eeb4b4, #FF6099);
+}
 .wrapper {
    min-height: 100vh;
-   border: 6px solid transparent;
-   border-image: linear-gradient(to right, #eeb4b4, #FF6099) 1;
    background-color: #FAEEE7;
    font-family: 'Merriweather', serif;
    font-size: 16px;
@@ -65,18 +67,41 @@ a {
 .header {
    margin: 0 0 30px 0;
 }
-.menu__nav {
-   padding: 25px 0;
+.header__menu {
+   margin: 0 -15px;
 }
+/*===================================BURGER====================================*/
+.menu__nav {
+   padding: 25px 15px;
+   display: flex;
+}
+.hidden {
+   opacity: 0;
+   visibility: hidden;
+   position: absolute;
+   left: -999999px;
+}
+.burger {
+   position: relative;
+   width: 40px;
+   height: 26px;
+   display: none;
+   justify-content: center;
+}
+
 .menu__list {
+   flex: 1 1 100%;
    display: flex;
    flex-wrap: wrap;
-   justify-content: space-between;
    align-items: center;
+   opacity: 1;
+   visibility: visible;
+   position: static;
+   justify-content: space-between;
 }
 .menu__item {
    font-weight: 700;
-   font-size: 1.25rem;
+   font-size: 1.5rem;
    line-height: 1.5;
    margin: 0 15px 0 0;
    position: relative;
@@ -84,9 +109,6 @@ a {
 .menu__item a {
    position: relative;
    z-index: 3;
-}
-.menu__item:last-child {
-   margin: 0 0 0 0;
 }
 .menu__item::after {
    content: "";
@@ -106,12 +128,90 @@ a {
    transform: scaleX(1);
    transform-origin: bottom left;
 }
+@media (max-width: 767.98px) {
+   .burger {
+      display: flex;
+   }
+   .header__menu {
+      position: relative;
+   }
+   .menu__nav {
+      justify-content: flex-end;
+   }
+   .menu__list {
+      position: absolute;
+      flex-direction: column;
+      top: 100%;
+      right: 0;
+      left: 0;
+      background-color: rgba(250, 238, 231, .7);
+      opacity: 0;
+      visibility: hidden;
+      text-align: center;
+      padding: 100px 0 40px 0;
+   }
+   .menu__item {
+      margin: 0 0 35px 0;
+   }
+   .menu__link {
+      font-size: 1.5rem;
+      line-height: 1.5;
+   }
+   .burger::before,
+   .burger span,
+   .burger::after {
+      position: absolute;
+      height: 2px;
+      border-radius: 2px;
+      background: #33272A;
+   }
+   .burger::before,
+   .burger::after {
+      content: "";
+   }
+   .burger::before {
+      top: 0;
+      width: 30px;
+   }
+   .burger span {
+      top: 13px;
+      width: 40px;
+   }
+   .burger::after {
+      bottom: 0;
+      width: 30px;
+   }
+
+   #burger:checked + .burger::before {
+      transition: transform .3s ease-in;
+      transform: rotate(45deg);
+      top: 12px;
+   }
+
+   #burger:checked + .burger span {
+      opacity: 0;
+   }
+
+   #burger:checked + .burger::after {
+      transition: transform .3s ease-in;
+      transform: rotate(-45deg);
+      bottom: 12px;
+   }
+
+   #burger:checked ~ .menu__list {
+      transition: opacity .3s ease-in;
+      opacity: 1;
+      visibility: visible;
+   }
+}
+/*================================================================================*/
+
 .header__hero {
    padding: 120px 0;
    display: flex;
    justify-content: space-between;
 }
-.header__text {
+.header__col {
    padding: 0 15px 0 0;
    font-size: 1.5rem;
    line-height: 1.5;
@@ -127,7 +227,7 @@ a {
    text-align: left;
    margin: 110px 0px 45px 0px;
 }
-.header__info {
+.header__text {
    margin: 0px 0px 25px 0px;
 }
 .header__links {
@@ -158,6 +258,12 @@ a {
    border: 10px dotted #fa709a;
 }
 .header__image {
+   flex: 0 0 400px;
+   height: 400px;
+   width: 400px;
+   background-size: cover;
+   background-position: center;
+   background-repeat: no-repeat;
 }
 @media (max-width: 991.98px) {
    .header__hero {
@@ -177,31 +283,23 @@ a {
       margin: 30px 0px 25px 0px;
       text-align: center;
    }
-   .header__text {
+   .header__col {
       text-align: center;
-      font-size: 1.25rem;
    }
    .links {
       justify-content: center;
    }
-   .links__text {
-      font-size: 1.25rem;
+   .header__links .links__item {
+      margin: 0px 30px 0px 0px;
    }
    .header__image .image {
       width: 350px;
       height: 350px;
    }
 }
-/*=================================MAIN====================================*/
-.main {
-}
-.main__container {
-}
 /*===============================MAIN=ABOUT===================================*/
 .about {
    margin: 0px 0px 30px 0;
-}
-.about__title {
 }
 .subtitle {
    font-family: 'Playfair Display', serif;
@@ -210,8 +308,6 @@ a {
    font-weight: 700;
    text-align: center;
    margin: 0 0 30px 0;
-}
-.about__body {
 }
 .about__box1 .box__image{
    position: relative;
@@ -264,11 +360,16 @@ a {
    justify-content: center;
 }
 .box__image {
+   height: 200px;
+   width: 200px;
+   background-size: cover;
+   background-position: center;
+   background-repeat: no-repeat;
 }
 .box__text {
    max-width: 700px;
    text-align: center;
-   font-size: 1.25rem;
+   font-size: 1.5rem;
    line-height: 1.5;
    padding: 15px;
 }
@@ -289,14 +390,13 @@ a {
    .about__box2.box {
       flex-direction: column;
    }
+   .box__text {
+      font-size: 1.25rem;
+   }
 }
 /*===============================MAIN=SKILLS===================================*/
 .skills {
    margin: 0px 0px 60px 0;
-}
-.skills__title {
-}
-.skills__body {
 }
 .block {
    display: flex;
@@ -304,14 +404,13 @@ a {
    justify-content: space-between;
    align-items: center;
 }
-.block__parent {
+.block__skill {
    flex: 1 1 auto;
    max-width: 900px;
    height: 50px;
 }
-.block__scale {
-   background: linear-gradient(90deg, #FF8BA7 0%, #FFBABD 50%, #FAEEE7 100%);
-   border: 4px solid #33272A;
+.block__load {
+   background: #FF8BA7;
    height: 100%;
    border-radius: 15px;
 }
@@ -323,21 +422,7 @@ a {
    max-width: 200px;
    overflow-wrap: break-word;
 }
-.skills__block1 .block__scale {
-   max-width: 75%;
-}
-.skills__block2 .block__scale {
-   max-width: 75%;
-}
-.skills__block3 .block__scale {
-   max-width: 50%;
-}
-.skills__block4 .block__scale {
-   max-width: 60%;
-}
-.skills__block5 .block__scale {
-   max-width: 45%;
-}
+
 @media (max-width: 991.98px) {
    .block {
       padding: 15px 0;
@@ -347,7 +432,7 @@ a {
    .block {
       padding: 15px 0;
    }
-   .block__parent {
+   .block__skill {
       height: 40px;
    }
    .block__name {
@@ -358,24 +443,24 @@ a {
 .portfolio { 
    margin: 0px 0px 60px 0;
 }
-.portfolio__title {
-}
-.title {
-}
-.portfolio__body {
+.portfolio__row {
    display: flex;
+   justify-content: center;
    flex-wrap: wrap;
    padding: 15px 0;
    margin: -5px;
 }
 .web {
-   flex: 1 1 30%;
+   flex: 0 0 300px;
+   height: 300px;
    position: relative;
    margin: 5px;
 }
 .web img {
    width: 100%;
    height: 100%;
+   object-fit: cover;
+   object-position: center;
 }
 .web__button {
    width: 100%;
@@ -398,32 +483,6 @@ a {
    border-radius: 10px;
    padding: 10px;
 }
-.portfolio__box1 {
-}
-.portfolio__box2 {
-}
-.portfolio__box3 {
-}
-.portfolio__box4 {
-}
-.portfolio__box5 {
-}
-.portfolio__box6 {
-}
-.portfolio__box7 {
-}
-.portfolio__box8 {
-}
-@media (max-width: 991.98px) {
-   .web__button {
-      display: none;
-   }
-}
-@media (max-width: 767.98px) {
-   .web__button {
-      display: none;
-   }
-}
 /*===============================FOOTER===================================*/
 .footer {
    margin: 0 auto;
@@ -441,7 +500,7 @@ a {
    align-items: center;
    margin: 0 0 40px 0;
 }
-.footer__subtitle {
+.footer__text {
    font-size: 1.5rem;
    line-height: 1.5;
    font-weight: 700;
@@ -451,7 +510,7 @@ a {
 .footer__button {
    display: inline-block;
    padding: 15px 40px;
-   background-color: #F77E9A;
+   background-color: #FF8BA7;
    color: #fff;
    font-size: 2rem;
    line-height: 1.5;
@@ -462,17 +521,11 @@ a {
 .footer__button:hover {
    background-color: #e2216a;
 }
-.footer__links {
-}
-.links {
-}
 .footer__links .links__item {
-   margin: 0px 30px 0px 0px;
+   margin: 0px 40px 0px 0px;
 }
 .footer__links .links__item:last-child {
    margin: 0px 0px 0px 0px;
-}
-.links__text {
 }
 @media (max-width: 991.98px) {
    .footer__body {
@@ -480,93 +533,9 @@ a {
    }
    .footer__subtitle {
       margin: 0 0 20px 0;
-      font-size: 1.25rem;
    }
    .footer__button {
       margin: 0px 0px 40px 0px;
       font-size: 1.5rem;
-   }
-}
-
-.header__menu {
-}
-.menu {
-}
-.menu__icon {
-}
-.menu__nav {
-}
-.menu__list {
-}
-.menu__item {
-}
-.menu__link {
-}
-
-@media (max-width: 767.98px) {
-   .menu__nav:active .wrapper {
-   position: relative;
-   padding: 0;
-   border: none;
-   }
-   .menu__nav:active [class*="__container"] {
-      padding: 0;
-   }
-   .header__menu {
-      position: relative;
-   }
-   .menu__nav {
-      display: none;
-   }
-   .menu__nav {
-      position: absolute;
-      min-height: 100vh;
-      width: 100%;
-      background-color: rgba(0, 0, 0, 0.75);
-      padding: 80px 0 0 0;
-   }
-   .menu__list {
-      display: flex;
-      flex-direction: column;
-   }
-   .menu__item {
-      margin: 0 0 35px 0;
-   }
-   .menu__item::after {
-      content: none;
-   }
-   .menu__link {
-      font-size: 1.5rem;
-      line-height: 1.5;
-      color: #fff;
-   }
-   .menu__link:hover {
-      color: #F7C9C9;
-   }
-   .menu__icon {
-      height: 26px;
-      width: 40px;
-      position: absolute;
-      top: 30px;
-      right: 20px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-   }
-   .line1 {
-      width: 30px;
-      height: 2px;
-      background-color: #33272A;
-   }
-   .line2 {
-      width: 40px;
-      height: 2px;
-      background-color: #33272A;
-   }
-   .line3 {
-      width: 30px;
-      height: 2px;
-      background-color: #33272A;
    }
 }
