--- a/style.css
+++ b/style.css
@@ -103,8 +103,10 @@ a {
    font-weight: 700;
    font-size: 1.5rem;
    line-height: 1.5;
-   margin: 0 15px 0 0;
    position: relative;
+}
+.menu__item + .menu__item {
+   margin-left: 15px;
 }
 .menu__item a {
    position: relative;
@@ -148,10 +150,13 @@ a {
       opacity: 0;
       visibility: hidden;
       text-align: center;
-      padding: 100px 0 40px 0;
+      padding: 80px 0 40px 0;
    }
    .menu__item {
       margin: 0 0 35px 0;
+   }
+   .menu__item + .menu__item {
+      margin-left: 0;
    }
    .menu__link {
       font-size: 1.5rem;
@@ -205,7 +210,6 @@ a {
    }
 }
 /*================================================================================*/
-
 .header__hero {
    padding: 120px 0;
    display: flex;
@@ -231,15 +235,15 @@ a {
    margin: 0px 0px 25px 0px;
 }
 .header__links {
-   margin: 0px 0px 25px 0px;
+   margin: 0px 0px 20px 0px;
    text-transform: uppercase;
+}
+.header__links .links__item + .links__item {
+   margin: 0px 0px 0px 30px;
 }
 .links {
    display: flex;
    flex-wrap: wrap;
-}
-.header__links .links__item {
-   margin: 0px 20px 0px 0px;
 }
 .links__item:last-child {
    margin: 0px 0px 0px 0px;
@@ -252,15 +256,16 @@ a {
 }
 .links__text:hover {
    color: #dba3a4;
+   transition: color .1s;
 }
 .image {
    border-radius: 50%;
    border: 10px dotted #fa709a;
 }
 .header__image {
-   flex: 0 0 400px;
-   height: 400px;
-   width: 400px;
+   flex: 0 0 380px;
+   height: 380px;
+   width: 380px;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
@@ -272,7 +277,7 @@ a {
 }
 @media (max-width: 767.98px) {
    .header__hero {
-      padding: 60px 0 30px 0;
+      padding: 40px 0 30px 0;
       flex-direction: column-reverse;
       align-items: center;
    }
@@ -285,12 +290,13 @@ a {
    }
    .header__col {
       text-align: center;
+      padding: 0;
    }
    .links {
       justify-content: center;
    }
-   .header__links .links__item {
-      margin: 0px 30px 0px 0px;
+   .header__links .links__item + .links__item {
+      margin: 0px 0px 0px 30px;
    }
    .header__image .image {
       width: 350px;
@@ -446,15 +452,16 @@ a {
 .portfolio__row {
    display: flex;
    justify-content: center;
+   align-content: stretch;
    flex-wrap: wrap;
    padding: 15px 0;
-   margin: -5px;
+   margin: -15px;
 }
 .web {
-   flex: 0 0 300px;
-   height: 300px;
+   flex: 1 1 47%;
    position: relative;
-   margin: 5px;
+   margin: 15px;
+   filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.2));
 }
 .web img {
    width: 100%;
@@ -462,7 +469,8 @@ a {
    object-fit: cover;
    object-position: center;
 }
-.web__button {
+.web:before {
+   content: "";
    width: 100%;
    height: 100%;
    position: absolute;
@@ -470,18 +478,37 @@ a {
    top: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.6);
-   display: flex;
+   display: block;
    visibility: hidden;
+   opacity: 0;
    align-items: center;
    justify-content: center;
 }
-.web:hover .web__button{
-   visibility: visible;
-}
-.web__text {
+.web:after {
+   content: "view project";
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   display: block;
    background: #FF8BA7;
    border-radius: 10px;
    padding: 10px;
+   visibility: hidden;
+   opacity: 0;
+   z-index: 5;
+   transform: translate(-50%, -50%);
+}
+.web:hover:before,
+.web:hover:after {
+   visibility: visible;
+   opacity: 1;
+   transition: opacity .3s ease-in;
+}
+@media (max-width: 479.98px) {
+   .web {
+      flex: 0 0 320px;
+      height: 180px;
+   }
 }
 /*===============================FOOTER===================================*/
 .footer {
@@ -516,16 +543,13 @@ a {
    line-height: 1.5;
    border-radius: 8px;
    margin: 0px 0px 60px 0px;
-   transition: background-color .3s;
 }
 .footer__button:hover {
    background-color: #e2216a;
+   transition: background-color .3s;
 }
-.footer__links .links__item {
-   margin: 0px 40px 0px 0px;
-}
-.footer__links .links__item:last-child {
-   margin: 0px 0px 0px 0px;
+.footer__links .links__item + .links__item {
+   margin: 0px 0px 0px 40px;
 }
 @media (max-width: 991.98px) {
    .footer__body {
