--- a/style.css
+++ b/style.css
@@ -51,11 +51,11 @@ a {
 }
 .wrapper-border {
    padding: 6px;
-   background: linear-gradient(to right, #eeb4b4, #FF6099);
+   background: linear-gradient(to right, #F4E2BD, #D8BB84);
 }
 .wrapper {
    min-height: 100vh;
-   background-color: #FAEEE7;
+   background-color: #F0F0F0;
    font-family: 'Merriweather', serif;
    font-size: 16px;
    line-height: 1.5;
@@ -117,10 +117,10 @@ a {
    display: inline-block;
    position: absolute;
    right: 0;
-   top: 22px;
+   top: 20px;
    width: 100%;
-   height: 6px;
-   background-color: #F7C9C9;
+   height: 8px;
+   background-color: #E3CB9A;
    z-index: 1;
    transform: scaleX(0);
    transform-origin: bottom right;
@@ -146,7 +146,7 @@ a {
       top: 100%;
       right: 0;
       left: 0;
-      background-color: rgba(250, 238, 231, .7);
+      background-color: rgba(240, 240, 240, .7);
       opacity: 0;
       visibility: hidden;
       text-align: center;
@@ -161,6 +161,13 @@ a {
    .menu__link {
       font-size: 1.5rem;
       line-height: 1.5;
+   }
+   .menu__item::after {
+      display: none;
+   }
+   .menu__link:hover {
+      color: rgba(51, 39, 42, .6);
+      transition: color .1s ease-in;
    }
    .burger::before,
    .burger span,
@@ -186,7 +193,6 @@ a {
       bottom: 0;
       width: 30px;
    }
-
    #burger:checked + .burger::before {
       transition: transform .3s ease-in;
       transform: rotate(45deg);
@@ -237,6 +243,7 @@ a {
 .header__links {
    margin: 0px 0px 20px 0px;
    text-transform: uppercase;
+   text-decoration: underline;
 }
 .header__links .links__item + .links__item {
    margin: 0px 0px 0px 30px;
@@ -255,18 +262,18 @@ a {
    line-height: 1.5;
 }
 .links__text:hover {
-   color: #dba3a4;
+   color: #E3CB9A;
    transition: color .1s;
 }
 .image {
    border-radius: 50%;
-   border: 10px dotted #fa709a;
+   border: 6px solid #E3CB9A;
 }
 .header__image {
    flex: 0 0 380px;
    height: 380px;
    width: 380px;
-   background-size: cover;
+   background-size: auto;
    background-position: center;
    background-repeat: no-repeat;
 }
@@ -298,7 +305,7 @@ a {
    .header__links .links__item + .links__item {
       margin: 0px 0px 0px 30px;
    }
-   .header__image .image {
+   .header__image {
       width: 350px;
       height: 350px;
    }
@@ -325,7 +332,7 @@ a {
    left: 210px;
    width: 100px;
    height: 100px;
-   background: url("img/icon1.png") 0 0/100% no-repeat;
+   background: url("img/icon1.svg") 0 0/100% no-repeat;
 }
 .about__box2 .box__image{
    position: relative;
@@ -345,11 +352,11 @@ a {
 .about__box3 .box__image::after {
    content: '';
    position: absolute;
-   left: -30%;
-   top: -18%;
-   width: 60px;
+   left: -40%;
+   top: -22%;
+   width: 100px;
    height: 100px;
-   background: url("img/icon3.png") 0 0/100% no-repeat;
+   background: url("img/icon3.svg") 0 0/100% no-repeat;
 }
 .box {
    display: flex;
@@ -416,7 +423,7 @@ a {
    height: 50px;
 }
 .block__load {
-   background: #FF8BA7;
+   background: #E3CB9A;
    height: 100%;
    border-radius: 15px;
 }
@@ -462,6 +469,8 @@ a {
    position: relative;
    margin: 15px;
    filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.2));
+   border-radius: 15px;
+   overflow: hidden;
 }
 .web img {
    width: 100%;
@@ -477,7 +486,7 @@ a {
    z-index: 3;
    top: 0;
    left: 0;
-   background: rgba(0, 0, 0, 0.6);
+   background: rgba(0, 0, 0, 0.6);;
    display: block;
    visibility: hidden;
    opacity: 0;
@@ -486,13 +495,16 @@ a {
 }
 .web:after {
    content: "view project";
+   display: flex;
+   justify-content: center;
+   align-items: center;
    position: absolute;
    top: 50%;
    left: 50%;
-   display: block;
-   background: #FF8BA7;
-   border-radius: 10px;
-   padding: 10px;
+   min-width: 150px;
+   min-height: 150px;
+   background: #E3CB9A;
+   border-radius: 50%;
    visibility: hidden;
    opacity: 0;
    z-index: 5;
@@ -521,7 +533,7 @@ a {
 .footer__body {
    border: 4px solid #33272A;
    border-radius: 20px;
-   padding: 40px 15px 50px 15px;
+   padding: 40px 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
@@ -537,7 +549,7 @@ a {
 .footer__button {
    display: inline-block;
    padding: 15px 40px;
-   background-color: #FF8BA7;
+   background-color: #D8BB84;
    color: #fff;
    font-size: 2rem;
    line-height: 1.5;
@@ -545,15 +557,18 @@ a {
    margin: 0px 0px 60px 0px;
 }
 .footer__button:hover {
-   background-color: #e2216a;
+   background-color: #e94e58;
    transition: background-color .3s;
 }
-.footer__links .links__item + .links__item {
-   margin: 0px 0px 0px 40px;
+.footer__links {
+   justify-content: center;
+}
+.footer__links .links__item {
+   padding: 5px 20px;
 }
 @media (max-width: 991.98px) {
    .footer__body {
-      padding: 20px 15px 40px 15px;
+      padding: 30px 15px;
    }
    .footer__subtitle {
       margin: 0 0 20px 0;
