--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ a {
       opacity: 0;
       visibility: hidden;
       text-align: center;
-      padding: 80px 0 40px 0;
+      padding: 100px 0 40px 0;
    }
    .menu__item {
       margin: 0 0 35px 0;
@@ -274,7 +274,6 @@ a {
    height: 380px;
    width: 380px;
    background-size: auto;
-   background-position: center;
    background-repeat: no-repeat;
 }
 @media (max-width: 991.98px) {
@@ -306,6 +305,7 @@ a {
       margin: 0px 0px 0px 30px;
    }
    .header__image {
+      flex: 0 0 350px;
       width: 350px;
       height: 350px;
    }
@@ -486,7 +486,8 @@ a {
    z-index: 3;
    top: 0;
    left: 0;
-   background: rgba(0, 0, 0, 0.6);;
+   background: rgba(0, 0, 0, 0.6);
+   border-radius: 15px;
    display: block;
    visibility: hidden;
    opacity: 0;
