--- a/style.css
+++ b/style.css
@@ -468,6 +468,7 @@ a {
    flex: 1 1 47%;
    position: relative;
    margin: 15px;
+	box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
    border-radius: 15px;
    overflow: hidden;
 }
