--- a/style.css
+++ b/style.css
@@ -499,6 +499,7 @@ a {
    display: flex;
    justify-content: center;
    align-items: center;
+	font-size: 1.5rem;
    position: absolute;
    top: 50%;
    left: 50%;
